[package]
name = "fruityger"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.41"
ffmpeg-next = "7.1.0"
futures = "0.3.31"
hmac = "0.12.1"
log = "0.4.27"
md-5 = "0.10.6"
paste = "1.0.15"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json"] }
rust-s3 = "0.35.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "rt", "sync"] }
tokio-stream = "0.1.17"
url = "2.5.4"

[dev-dependencies]
simple_logger = "5.0.0"
