[package]
name = "fruityger"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.41"
ffmpeg-next = "7.1.0"
hmac = "0.12.1"
md-5 = "0.10.6"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["fs", "macros", "rt", "sync"] }
url = "2.5.4"
